k8s/14-kafka-zookeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: mdm-system
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.5.0
        ports:
        - name: kafka
          containerPort: 9092
        - name: controller
          containerPort: 29093
        volumeMounts:
        - name: kafka-data
          mountPath: /var/lib/kafka/data
      volumes:
      - name: kafka-data
        persistentVolumeClaim:
          claimName: kafka-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: mdm-system
spec:
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  selector:
    app: kafka
