k8s/15-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: mdm-system
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0
        args:
        - start-dev
        - --import-realm
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import/
      volumes:
      - name: realm-config
        configMap:
          name: keycloak-realm-config
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: mdm-system
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
