k8s/31-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mdm-system
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/version: "2.0.9"
    version: "2.0.9"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/version: "2.1.7"
        version: "2.1.7"
    spec:
      terminationGracePeriodSeconds: 30
      hostAliases:
      - ip: "10.100.179.117"
        hostnames:
        - "mplatform.local"
      containers:
      - name: frontend
        image: mplatform-frontend:2.1.7
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 2Gi
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 15
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mdm-system
spec:
  ports:
  - port: 3000
  selector:
    app: frontend
